# eroxii-alpr-qr

./: .env.example  .gitignore  main.py  pyproject.toml  setup.bat  setup.sh  startup.bat
app/: config.py  pusher.py  serial_reader.py  server.py  state.py
